// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity/ActivityItem ActivityChannelPackageUpdated smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart makeStyles-list-8 css-15u9cok-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg xmlns="http://www.w3.org/2000/svg"
               focusable="false"
               width="30px"
               height="30px"
               preserveaspectratio="xMidYMid meet"
               viewbox="0 0 24 24"
               style="transform: rotate(360deg);"
          >
            <path fill="#00d3ff"
                  d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
            >
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 makeStyles-appName-6 css-1s23nr9-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 makeStyles-time-7 css-b4h4sf-MuiTypography-root">
        05:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;

exports[`activity/ActivityItem Warning smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart makeStyles-list-4 css-15u9cok-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg xmlns="http://www.w3.org/2000/svg"
               focusable="false"
               width="30px"
               height="30px"
               preserveaspectratio="xMidYMid meet"
               viewbox="0 0 24 24"
               style="transform: rotate(360deg);"
          >
            <path fill="#ff5500"
                  d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
            >
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 makeStyles-appName-2 css-1s23nr9-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 makeStyles-time-3 css-b4h4sf-MuiTypography-root">
        05:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-grid-xs-12 css-sa6qj6-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <p class="MuiTypography-root MuiTypography-body1 css-cb7ys4-MuiTypography-root">
          GROUP
        </p>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-groupLink-1 css-1emptwe-MuiTypography-root-MuiLink-root"
           href="/apps/XXXX-XXX/groups/YYYY-YYYY"
        >
          some group
        </a>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;
